# repod

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .readthedocs.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  db-update  justfile  pyproject.toml  tox.ini
ci/: bump_dependencies_to_latest.py
db-update/: .gitignore  README.md  db-update
db-update-mockup/: .gitignore  README  create-demodata  update-hook
db-update-mockup/templates/database/: description
db-update-mockup/templates/package/hooks/: update
db-write/: db-write
db-write/workdirs/x86_64/extra/: foo.json
db2json/: README.md  db2json.py
dbscripts/: README.md  db-move  db-remove  db-update  demo-init.sh
dbscripts/lib/: dbwrite.py
docs/: authors.rst  conf.py  contributing.rst  desc.rst  getting_started.md  index.rst  packager_workflows.rst  sync_database.rst
docs/repod/: changelog.rst  configuration.rst  installation.rst  tooling.rst  usage.rst
docs/repod/man/: index.rst  repod_conf.rst  repod_file.rst
docs/repositories/: binary_repository.rst  files.rst  management_repository.rst  source_repository.rst  source_tarball_repository.rst  sync_database.rst
examples/: config.toml
repo_management/: argparse.py  cli.py  config.py  convert.py  defaults.py  errors.py  files.py  models.py  operations.py
repo_management/models/: __init__.py  common.py  config.py  package.py  repo.py
repo_management/templates/: desc.j2  files.j2
repod/: __init__.py  argparse.py  cli.py  commands.py  config.py  convert.py  defaults.py  errors.py  files.py  operations.py
repod/action/: check.py  task.py  workflow.py
repod/archive/: archive.py
repod/cli/: __init__.py  argparse.py  cli.py
repod/common/: defaults.py  enums.py  models.py  regex.py
repod/config/: __init__.py  defaults.py  settings.py
repod/files/: __init__.py  buildinfo.py  common.py  mtree.py  package.py  pkginfo.py  srcinfo.py
repod/models/: __init__.py  common.py  config.py  package.py  repo.py
repod/repo/: __init__.py
repod/repo/management/: __init__.py  outputpackage.py
repod/repo/package/: __init__.py  repofile.py  syncdb.py
repod/templates/: desc_v1.j2  desc_v2.j2
repod/verification/: __init__.py  pgp.py
repod/version/: __init__.py  alpm.py  util.py
templates/package/: description
tests/: __init__.py  conftest.py  fixtures.py  test_argparse.py  test_cli.py  test_commands.py  test_config.py  test_convert.py  test_file.py  test_files.py  test_models.py  test_operations.py  test_repod_init.py
tests/action/: test_check.py  test_task.py  test_workflow.py
tests/archive/: test_archive.py
tests/cli/: test_argparse.py  test_cli.py
tests/common/: test_enums.py  test_models.py  test_regex.py
tests/config/: test_config.py  test_settings.py
tests/files/: test_buildinfo.py  test_common.py  test_files_init.py  test_mtree.py  test_package.py  test_pkginfo.py  test_srcinfo.py
tests/repo/: test_repo_init.py
tests/repo/management/: test_outputpackage.py
tests/repo/package/: test_repofile.py  test_syncdb.py
tests/resources/repo_db/efivar-37-4/: desc  files
tests/resources/repo_db/elfutils-0.182-1/: desc  files
tests/resources/repo_db/libelf-0.182-1/: desc  files
tests/resources/repo_db/pacman-5.2.2-1/: desc  files
tests/verification/: test_pgp.py
tests/version/: test_alpm.py  test_util.py
