[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
  {name = "Arch Linux", email = "arch-projects@lists.archlinux.org"},
]
dynamic = ["version"]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10,<4.0"
dependencies = [
  "aiofiles<1.0.0,>=0.8.0",
  "email-validator<2.0.0,>=1.2.1",
  "jinja2<4.0.0,>=3.0.0",
  "orjson<4.0.0,>=3.6.6",
  "pydantic<2.0.0,>=1.8.1",
  "python-magic<1.0.0,>=0.4.26",
  "pyxdg<1.0,>=0.28",
  "pyzstd<1.0.0,>=0.15.2",
  "subprocess-tee<1.0.0,>=0.3.5",
  "tomli<3.0.0,>=2.0.0",
]
name = "repod"
description = "Tooling to maintain binary package repositories for Linux distributions using the pacman package manager"
readme = "README.md"
keywords = [
  "arch linux",
  "repository",
  "pacman",
  "packages",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Internet",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development",
  "Topic :: System :: Archiving :: Packaging",
  "Topic :: System :: Operating System",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.urls]
"Bug Tracker" = "https://gitlab.archlinux.org/archlinux/repod/-/issues/"
homepage = "https://gitlab.archlinux.org/archlinux/repod"
repository = "https://gitlab.archlinux.org/archlinux/repod"
documentation = "https://repod.archlinux.page"

[project.optional-dependencies]
alt_vercmp = ["pyalpm<1.0.0,>=0.10.6"]
alt_file = ["file-magic<1.0.0,>=0.4.0"]

[project.scripts]
repod-file = "repod.cli:repod_file"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.dev-dependencies]
dev = [
  "black<23.0.0,>=22.1.0",
  "coverage<7.0,>=6.1",
  "coverage-conditional-plugin<1.0.0,>=0.5.0",
  "flake8<6.0.0,>=5.0.0",
  "isort<6.0.0,>=5.10.0",
  "mypy<1.0,>=0.971",
  # pip for mypy --install-types: https://github.com/python/mypy/issues/13580
  "pip>=22.2.2",
  "pytest<8.0.0,>=7.0.0",
  "pytest-asyncio<1.0.0,>=0.19.0",
  "pytest-lazy-fixture<1.0.0,>=0.6.3",
  # setuptools for coverage-conditional-plugin: https://github.com/wemake-services/coverage-conditional-plugin/issues/174
  "setuptools>=62.3.1",
  "sphinx<6.0.0,>=5.0.0",
  "sphinx-rtd-theme<2.0.0,>=1.0.0",
  "sphinx-argparse<1.0.0,>=0.3.1",
  "sphinxcontrib-programoutput<1.0,>=0.17",
  "tox<4.0.0,>=3.24.5",
  "vulture<3.0,>=2.5",
]

[tool.pdm.build]
excludes = [
  "./**/.git",
  "docs/_build/",
  "docs/schema/",
]
includes = [
  "repod",
]
package-dir = "."
source-includes = [
  "tests/",
  "docs/",
  "LICENSE",
  "justfile",
]

[tool.pytest.ini_options]
markers = ["integration", "regex"]
asyncio_mode = "auto"

[tool.black]
line-length = 120
exclude = '''
/(
  \.direnv|
  |\.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |\.svn
  |_build
  |buck-out
  |db-write
  |db2json
  |dbscripts
  |build
  |dist
)/
'''

[tool.coverage.path]
source = "repod"

[tool.coverage.report]
omit = ["tests/*", ".tox/*", "db-write/*", "db2json/*", "dbscripts/*"]
precision = 2
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest --junit-xml=junit-report.xml -vv tests/ -m 'not integration and not regex'"
omit = ["tests/*", ".tox/*", "db-write/*", "db2json/*", "dbscripts/*"]
relative_files = true
plugins = ["coverage_conditional_plugin"]

[tool.coverage.xml]
output = ".tox/coverage.xml"

[tool.coverage.coverage_conditional_plugin.rules]
no-cover-nonlinux = "'linux' not in sys.platform"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
follow_imports_for_stubs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
warn_unreachable = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
